--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="retry">Retry</string>
-    <string name="it_seems_we_don_t_have_this_movie">It seems we don\'t have this movie</string>
+    <string name="it_seems_we_don_t_have_this_movie">It seems we don\'t have this movie. Please try another one!</string>
     <string name="results_could_not_be_loaded">Results could not be loaded</string>
     <string name="search">Search</string>
     <string name="name">by Jeff Amady</string>
