--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="search">Search</string>
     <string name="name">by Jeff Amady</string>
     <string name="made_with">Made with</string>
+    <string name="rate_this_movie">Rate this movie</string>
 </resources>
